--- a/src/components/dashboard/style.css
+++ b/src/components/dashboard/style.css
@@ -1,137 +1,8 @@
-.main-container {
-    display: flex;
-    justify-content: left;
-    height: 100vh;
-    width: 100vw;
-  }
-  
-  .dashboard-content { 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    transition: 0.5s ease-in-out;
-    background-color: rgb(96, 109, 182);
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  .dashboard-list {
-    list-style: none;
-    position: relative;
-    height: 88%;
-    padding: 18px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .dashboard-list li {
-    padding: 0.7rem;
-    margin: 8px 0;
-    border-radius: 8px;
-    transition: all 0.5s ease-in-out;
-    display: flex;
-    align-items: center;
-  }
-  
-  .dashboard-list li:hover,
-  .active {
-    background-color: #b3b3b358;
-    cursor: pointer;
-  }
-  
-  .dashboard-content li a {
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    overflow: hidden;
-  }
-  
-  .dashboard-list li span {
-    padding: 4px;
-  }
-  
-  .dashboard-list .logout a {
-    overflow: hidden;
-  }
-  
-  .data-container {
-    width: 100%;
-  }
-  .header {
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #dddddd;
-    margin: 16px;
-    padding: 5px 20px;
-    border-radius: 8px;
-  }
-  
-  .header a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #000;
-    padding: 0px 10px;
-    border-radius: 8px;
-  }
-  
-  .header a:hover {
-    background-color: #cecece;
-  }
-  
-  .header a span {
-    padding: 12px;
-  }
-  
-  .upload {
-    box-sizing: border-box;
-    outline: none;
-  }
-  
-  input[type="file"] {
-    display: none;
-  }
-  
-  label {
-    position: absolute;
-    top: 100px;
-    right: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 30px;
-    width: 150px;
-    height: 50px;
-    background-color: rgb(96, 109, 182);
-    color: white;
-    cursor: pointer;
-  }
-  
-  .data-body {
-    margin-block: 80px;
-    width: 100%;
-  }
-  
-  .data-body th {
-    border: 1px solid black;
-  }
-  .data-body td {
-    border: 1px solid black;
-  }
-  
-  .table-body {
-    background-color: #e7e7e7;
-    margin: 16px;
-    padding: 8px;
-    border-radius: 8px;
-  }
-  
+.dashboard-container {
+  display: flex;
+}
+
+.main-content {
+  flex: 1;
+  padding: 20px; /* Add appropriate styling for the main content area */
+}
